src/app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  /* Color Paletts with https://www.colorpalett.es/ */
  /* --color-primary-50: oklch(91.45% 0.023 264); */

  --color-background: var(--background);
  --color-marged-background: var(--margined-background);
  --color-input-focus-background: var(--input-focus-background);
  --color-border: var(--border);
  --color-text: var(--text);
  --color-muted: var(--muted);
}

@layer base {
  :root {
    --background: #fff;
    --margined-background: #fff;
    --input-focus-background: #fff;
    --foreground: #000;
    --border: #000;
    --text: #000;
    --muted: #4444447b;
  }

  [data-theme="dark"] {
    --background: #000;
    --margined-background: #000;
    --input-focus-background: #000;
    --foreground: #fff;
    --border: #fff;
    --text: #fff;
    --muted: #bbbbbb7b;
  }
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

.text-black-white {
  color: var(--color-text);
  -webkit-text-stroke: 5px var(--color-background);
  paint-order: stroke fill;
}

.text-white-black {
  color: var(--color-background);
  -webkit-text-stroke: 5px var(--color-text);
  paint-order: stroke fill;
}

